# airavata

./: .asf.yaml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  Allocation Manager Feature Architecture  CITATION.cff  CLAUDE.md  COMPLETION_SUMMARY.md  DEPENDENCY_CLEANUP_SUMMARY.md  DEPLOY  DISCLAIMER  Dockerfile  Dockerfile-deploybuild  Dockerize-RabbitMQ.txt  FINAL_TEST_STATUS.md  INSTALL  INSTALL_AND_NOTICE  LICENSE  Makefile  NOTICE  QUICKSTART.md  README  README.md  RELEASE_NOTES  ResourceAllocationDatabase.txt  START-SERVICES.md  TEST_EXECUTION_SUMMARY.md  Tiltfile  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  airavata-server.properties  airavata-service-README.md  apache-license-header-java.txt  auth.state  build.sh  build_js.bat  build_js.sh  (+35 more)
airavata-api/airavata-client-sdks/airavata-experiment-sdk/: README.md  pyproject.toml
airavata-api/airavata-client-sdks/airavata-experiment-sdk/airavata_experiments/: __init__.py  base.py  runtime.py
airavata-api/airavata-client-sdks/airavata-experiment-sdk/samples/: .gitignore  poc.ipynb
airavata-api/airavata-client-sdks/airavata-python-sdk/: .gitignore  README.md  pom.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
airavata-api/airavata-client-sdks/airavata-python-sdk/airavata/: __init__.py
airavata-api/airavata-client-sdks/airavata-python-sdk/airavata_experiments/: __init__.py  airavata.py  base.py  plan.py  runtime.py  scripter.py  sftp.py  task.py
airavata-api/airavata-client-sdks/airavata-python-sdk/airavata_jupyter_magic/: __init__.py  device_auth.py
airavata-api/airavata-client-sdks/airavata-python-sdk/airavata_python_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
airavata-api/airavata-client-sdks/airavata-python-sdk/clients/: api_server_client.py  credential_store_client.py  file_handling_client.py  group_manager_client.py  iam_admin_client.py  keycloak_token_fetcher.py  sftp_file_handling_client.py  user_profile_client.py
airavata-api/airavata-client-sdks/airavata-python-sdk/docs/: index.md
airavata-api/airavata-client-sdks/airavata-python-sdk/samples/: annotations.py  create_launch_echo_experiment.py  create_launch_gaussian_experiment.py  file_utils.py  group_manager_client_sample.py  iam_admin_client_samples.py  poc.ipynb  sharing_registry_client_samples.py  tenant_profile_client_sample.py  user_profile_client_sample.py  user_profile_client_samples.py
airavata-api/airavata-client-sdks/airavata-python-sdk/transport/: settings.ini  settings.py  utils.py
airavata-python-sdk/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
airavata-python-sdk/airavata/api/: Airavata.py
airavata-python-sdk/airavata/api/sharing/: ttypes.py
airavata-python-sdk/airavata/api/workflow/: Workflow.py
airavata-python-sdk/airavata/base/api/: BaseAPI-remote
airavata-python-sdk/airavata/model/sharing/: constants.py  ttypes.py
airavata-python-sdk/airavata/model/workspace/: ttypes.py
airavata-python-sdk/airavata_auth/: device_auth.py
airavata-python-sdk/airavata_experiments/: airavata.py  plan.py  runtime.py
airavata-python-sdk/airavata_experiments/neuro/: applications.py
airavata-python-sdk/airavata_jupyter_magic/: __init__.py
airavata-python-sdk/airavata_sdk/: __init__.py  client.py
airavata-python-sdk/airavata_sdk/clients/: agent_interaction_client.py  api_server_client.py  credential_store_client.py  experiment_management_client.py  file_handling_client.py  gateway_profile_client.py  group_manager_client.py  iam_admin_client.py  keycloak_token_fetcher.py  plan_client.py  research_hub_client.py  research_project_client.py  research_resource_client.py  research_session_client.py  sharing_registry_client.py  tenant_profile_client.py  user_profile_client.py
airavata-python-sdk/airavata_sdk/facade/: __init__.py  agent.py  compute.py  credential.py  iam.py  research.py  sharing.py  storage.py
airavata-python-sdk/airavata_sdk/helpers/: __init__.py  _envelope.py  compute_resources.py  credential_resources.py  experiment_orchestration.py  iam_resources.py  models.py  queue_settings.py  research_resources.py  sharing_resources.py  storage_resources.py
airavata-python-sdk/airavata_sdk/samples/: api_server_client_samples.py  file_utils.py  gateway_profile_client_samples.py  group_manager_client_samples.py  iam_admin_client_samples.py  metadata_fetcher.py  sharing_registry_client_samples.py  tenant_profile_client_samples.py  user_profile_client_samples.py
airavata-python-sdk/airavata_sdk/transport/: utils.py
airavata-python-sdk/tests/: test_client_username.py
airavata-python-sdk/tests/helpers/: test_compute_resources.py  test_credential_resources.py  test_iam_resources.py  test_research_resources.py  test_sharing_resources.py  test_storage_resources.py
dev-tools/ansible/: .gitignore  DEVELOPER_GUIDE.md  NOTE  README.md  SETUP_FLOW.md  airavata-iam-setup.yml  airavata.yml  airavata_setup.yml  airavata_update.yml  all_deploy_js.yml  all_vms_js.yml  ansible.cfg  apiserver.yml  build_all_js.yml  consul.yml  database.yml  deploy.yml  deploy_setup.sh  deploy_update.sh  dev_airavata_deploy.yml  dev_pga_deploy.yml  django.yml  gfac.yml  helix.yml  hosts  kafka.yml  keycloak.yml  local_airavata_deploy.yml  local_vbox_deploy.yml  mft-agent.yml  mft.yml  pga-scigap-dev.yml  pga-scigap-prod.yml  pga-scigap-smaltr.yml  pga-scigap-staging.yml  pga-scigap-stagingnew.yml  pga-scigap-testing.yml  pga-single-vhost.yml  pga.yml  platform-monitor.yml  (+6 more)
dev-tools/ansible/group_vars/: all.yml  local.yml.template
dev-tools/ansible/inventories/airavata-iam/: hosts
dev-tools/ansible/roles/: README.md
dev-tools/ansible/tests/: README.md  conftest.py  pytest.ini  test_database_role.py  test_keycloak_role.py  test_redis_role.py
modules/agent-framework/airavata-jupyter-magic/: .gitignore  README.md  airavata_jupyter_magic.py  airavata_magics.py  device_auth.py  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore  MANIFEST.in  setup.cfg
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: apps.py  queue_settings_calculators.py  views.py
(+22648 files in other folders)
