[metadata]
name = airavata-django-portal-commons
version = 1.0.1
description = Utilities for working with dynamically loaded Django apps.
long_description = file: README.md

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2, < 4
    importlib_metadata
