[metadata]
name = airavata-django-portal-commons
version = 1.0.2
description = Utilities for working with dynamically loaded Django apps.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django
    importlib_metadata
