[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 2.2
    airavata-django-portal-sdk

[options.entry_points]
airavata.djangoapp =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.apps:{{ cookiecutter.app_config_class_name }}
