#
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[project]
name = "airavata-ansible"
version = "0.21.0"
description = "Ansible deployment scripts for Apache Airavata"
requires-python = ">=3.9"
dependencies = [
    "ansible-core>=2.20.1",
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=26.1.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "testcontainers[all]>=4.0.0",
    "paramiko>=3.4.0",
    "docker>=7.0.0",
]

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.j2", "*.cfg"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
