[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-experiment-sdk"
version = "0.1.0"
description = "A SDK for airavata experiments"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [{ name = "Airavata Developers", email = "dev@airavata.apache.org" }]
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pydantic",
  "rich",
  "paramiko",
  "scp",
  "ipywidgets",
  "airavata-python-sdk @ git+https://github.com/yasithdev/airavata.git@experiment-sdk#subdirectory=airavata-api/airavata-client-sdks/airavata-python-sdk",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["airavata_experiments*"]
exclude = ["*.egg-info"]