[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-python-sdk"
version = "1.1.6"
description = "Apache Airavata Python SDK"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [{ name = "Airavata Developers", email = "dev@airavata.apache.org" }]
requires-python = ">=3.6"
dependencies = [
  "oauthlib",
  "requests",
  "requests-oauthlib",
  "thrift~=0.16.0",
  "thrift_connector",
  "paramiko",
  "scp",
  "pysftp",
  "configparser",
  "urllib3",
  "pyjwt"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["airavata*"]

[tool.setuptools.package-data]
"airavata_sdk.transport" = ["*.ini"]
"airavata_sdk.samples.resources" = ["*.pem"]
