[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-jupyter-magic"
version = "0.1.0"
description = "Jupyter magics for running notebook cells on remote HPC resources. Powered by Apache Airavata."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "requests",
    "PyJWT",
    "ipython"
]

[project.optional-dependencies]
dev = ["black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[project.urls]
Homepage = "https://github.com/apache/airavata"
Repository = "https://github.com/apache/airavata"
