[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-jupyter-magic"
version = "1.0.3"
description = "Jupyter magics for running notebook cells on remote HPC resources. Powered by Apache Airavata."
authors = [
    { name = "Yasith Jayawardana", email = "yasith@gatech.edu" },
    { name = "Dimuthu Wannipurage", email = "dimuthuw@gatech.edu" },
    { name = "Lahiru Jayathilake", email = "ljayathilake3@gatech.edu" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "requests",
    "PyJWT",
    "ipython"
]

[project.optional-dependencies]
dev = ["black", "flake8"]

[tool.setuptools]
py-modules = ["airavata_magics", "device_auth"]

[project.urls]
Homepage = "https://github.com/apache/airavata"
Repository = "https://github.com/apache/airavata"
